[package]
name = "gnezdot"
version = "1.1.0"
edition = "2024"

[dependencies]
nanorand = { version = "0.8.0" }
anyhow={version="1.0.100"}
headless_chrome={version="1.0.18",features=["native-tls","nightly",]}
serde = { version = "1.0.228" ,features=["derive"]}
serde_json = { version = "1.0.145" ,features=["default"]}
chrono = { version = "0.4.42" ,features=["default"]}
scraper = {version="0.25.0",features=["default"]}
toml = { version = "0.9.8" ,features=["serde"]}
